# believe14

./: CMakeLists.txt  organisation.xlsx  quicky  quicky.cpp
believe14-R/: DESCRIPTION  NAMESPACE
believe14-R/R/: RcppExports.R  linear_pca.R
believe14-R/man/: believe14-package.Rd  pca.Rd
believe14-R/src/: RcppExports.cpp
cmake/: believe14Config.cmake.in
include/: believe14.hpp
include/believe14/core/: config.hpp
include/believe14/methods/: methods_linear.hpp
include/believe14/utilities/: util_ann.hpp  util_checker.hpp  util_converter.hpp  util_distance.hpp  util_kernel.hpp  util_shortest.hpp
